--- a/frontend/src/app/home/home.component.scss
+++ b/frontend/src/app/home/home.component.scss
@@ -2,17 +2,17 @@
 $margin-promotion-sections: 60px;
 $margin-promotion-sections-small: 15px;
 
-.docs-header-background {
+.header-background {
   overflow: hidden;
 }
 
-.docs-header-section {
+.header-section {
   text-align: center;
   padding-top: $margin-promotion-sections;
   margin-bottom: 20px;
 }
 
-.docs-header-headline {
+.header-headline {
   h1 {
     font-size: 56px;
     font-weight: 300;
@@ -28,7 +28,7 @@ $margin-promotion-sections-small: 15px;
   }
 }
 
-.docs-homepage-promo {
+.homepage-promo {
   align-items: center;
   display: flex;
   flex-direction: column;
@@ -51,36 +51,36 @@ $margin-promotion-sections-small: 15px;
 }
 
 
-.docs-homepage-row {
+.homepage-row {
   display: flex;
   max-width: 920px;
   margin: $margin-promotion-sections 0;
 }
 
-.docs-homepage-row .docs-svg-image{
+.homepage-row .docs-svg-image{
   max-width: 90%;
 }
 
-.docs-homepage-reverse-row {
+.homepage-reverse-row {
   flex-direction: row-reverse;
 }
 
-.docs-header-start,
-.docs-homepage-bottom-start {
+.header-start,
+.homepage-bottom-start {
   text-align: center;
   margin: $margin-promotion-sections 0;
 }
 
-.docs-homepage-promo-img,
-.docs-homepage-promo-desc {
+.homepage-promo-img,
+.homepage-promo-desc {
   width: 50%;
 }
 
-.docs-homepage-promo-img {
+.homepage-promo-img {
   text-align: center;
 }
 
-.docs-homepage-promo-desc {
+.homepage-promo-desc {
   line-height: 2;
   display: flex;
   flex-direction: column;
@@ -92,16 +92,20 @@ $margin-promotion-sections-small: 15px;
   * Rules for when the device is detected to be a small screen.
   */
 @media (max-width: 720px) {
-  .docs-header-section {
+  .header-section {
     padding-top: $margin-promotion-sections-small;
   }
 
-  .docs-header-start,
-  .docs-homepage-bottom-start {
+  .header-start,
+  .homepage-bottom-start {
     margin: $margin-promotion-sections-small 0;
   }
 
-  .docs-homepage-row {
+  .homepage-row {
     margin: $margin-promotion-sections-small 0;
+  }
+
+  .header-headline{
+    padding-top: 70px;
   }
 }
