--- a/frontend/src/app/navbar/navbar.component.scss
+++ b/frontend/src/app/navbar/navbar.component.scss
@@ -1,4 +1,4 @@
-.docs-navbar-header {
+.navbar-header {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -27,16 +27,16 @@
   vertical-align: middle;
 }
 
-.docs-navbar-link {
+.navbar-link {
   text-decoration: inherit;
   flex: 1;
 }
 
-.docs-navbar {
+.navbar {
   display: none;
 }
 
-.docs-navbar-show-small {
+.navbar-show-small {
   display: none;
 }
 
@@ -45,15 +45,15 @@
   * Moves content two rows instead of one.
   */
 @media (max-width: 720px) {
-  .docs-navbar-hide-small {
+  .navbar-hide-small {
     display: none;
   }
 
-  .docs-navbar-show-small {
+  .navbar-show-small {
     display: block;
   }
 
-  .docs-navbar {
+  .navbar {
     display: flex;
   }
 
