--- a/frontend/src/app/page-title/_pagetitle-theme.scss
+++ b/frontend/src/app/page-title/_pagetitle-theme.scss
@@ -8,7 +8,7 @@
   app-page-title {
     color: mat-color($primary, default-contrast);
 
-    .docs-navbar, .docs-navbar-header {
+    .navbar, .navbar-header {
       background: mat-color($primary);
     }
   }
